--- a/index.html
+++ b/index.html
@@ -4,6 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Youtube Clone</title>
+
+    <!-- daisyUI CDN -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@5"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- header design -->
+    <header>
+      <nav
+        class="w-11/12 mx-auto flex justify-between py-4 border-b-2 border-[var(--clr-bar)]"
+      >
+        <div class="logo">
+          <img src="./assets/Logo.png" alt="" />
+        </div>
+        <div class="sort">
+          <button
+            class="px-3 py-2 bg-[var(--clr-bg)] rounded-md text-[var(--text-secondary)]"
+          >
+            Sort By View
+          </button>
+        </div>
+        <div class="blog">
+          <button
+            class="px-3 py-2 bg-[var(--clr--primary)] rounded-md text-white"
+          >
+            Blogs
+          </button>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
