load-button-from-api

--- a/index.html
+++ b/index.html
@@ -27,15 +27,13 @@
         </div>
         <div class="sort">
           <button
-            class="px-3 py-1 bg-[var(--clr-bg)] rounded-md text-[var(--text-secondary)]"
+            class="btn btn-sm bg-[var(--clr-bg)] text-[var(--text-secondary)]"
           >
             Sort By View
           </button>
         </div>
         <div class="blog">
-          <button
-            class="px-3 py-1 bg-[var(--clr-primary)] rounded-md text-white"
-          >
+          <button class="btn btn-sm bg-[var(--clr-primary)] text-white">
             Blogs
           </button>
         </div>
@@ -43,26 +41,14 @@
     </header>
 
     <main>
-      <nav class="my-3 flex justify-center gap-3">
-        <button class="bg-[var(--clr-primary)] text-white rounded-md px-3 py-1">
+      <nav id="category-container" class="my-3 flex justify-center gap-3">
+        <button class="btn btn-sm bg-[var(--clr-primary)] text-white">
           All
-        </button>
-        <button
-          class="bg-[var(--btn-bg)] text-[var(--btn-fg)] rounded-md px-3 py-1"
-        >
-          Music
-        </button>
-        <button
-          class="bg-[var(--btn-bg)] text-[var(--btn-fg)] rounded-md px-3 py-1"
-        >
-          Comedy
-        </button>
-        <button
-          class="bg-[var(--btn-bg)] text-[var(--btn-fg)] rounded-md px-3 py-1"
-        >
-          Drawing
         </button>
       </nav>
     </main>
+
+    <!-- script file -->
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
