implement-video-card-design

--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
       </nav>
     </header>
 
-    <main>
+    <main class="w-11/12 mx-auto">
       <nav id="category-container" class="my-3 flex justify-center gap-3">
         <button class="btn btn-sm bg-[var(--clr-primary)] text-white">
           All
         </button>
       </nav>
+
+      <section id="video-container" class="grid grid-cols-4 gap-y-9"></section>
     </main>
 
     <!-- script file -->
