completed-dynamic-design

--- a/index.html
+++ b/index.html
@@ -42,12 +42,15 @@
 
     <main class="w-11/12 mx-auto">
       <nav id="category-container" class="my-3 flex justify-center gap-3">
-        <button class="btn btn-sm bg-[var(--clr-primary)] text-white">
+        <button
+          onclick="loadVideos()"
+          class="btn btn-sm bg-[var(--clr-primary)] text-white"
+        >
           All
         </button>
       </nav>
 
-      <section id="video-container" class="grid grid-cols-4 gap-y-9"></section>
+      <section id="video-container" class="grid grid-cols-4 gap-4"></section>
     </main>
 
     <!-- script file -->
