--- a/index.html
+++ b/index.html
@@ -56,6 +56,18 @@
           </h2>
         </div>
       </section>
+
+      <dialog id="my_modal_1" class="modal">
+        <div class="modal-box">
+          <div id="details-container"></div>
+          <div class="modal-action">
+            <form method="dialog">
+              <!-- if there is a button in form, it will close the modal -->
+              <button class="btn">Close</button>
+            </form>
+          </div>
+        </div>
+      </dialog>
     </main>
 
     <!-- script file -->
