implement-search-functionality

--- a/index.html
+++ b/index.html
@@ -26,15 +26,29 @@
           <img class="w-[120px]" src="./assets/Logo.png" alt="" />
         </div>
         <div class="sort">
-          <button
-            class="btn btn-sm bg-[var(--clr-bg)] text-[var(--text-secondary)]"
-          >
-            Sort By View
-          </button>
+          <label class="input">
+            <svg
+              class="h-[1em] opacity-50"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+            >
+              <g
+                stroke-linejoin="round"
+                stroke-linecap="round"
+                stroke-width="2.5"
+                fill="none"
+                stroke="currentColor"
+              >
+                <circle cx="11" cy="11" r="8"></circle>
+                <path d="m21 21-4.3-4.3"></path>
+              </g>
+            </svg>
+            <input id="search" type="search" required placeholder="Search" />
+          </label>
         </div>
         <div class="blog">
-          <button class="btn btn-sm bg-[var(--clr-primary)] text-white">
-            Blogs
+          <button class="btn btn-md bg-[var(--clr-primary)] text-white">
+            Sort by view
           </button>
         </div>
       </nav>
