implement-loading-functionality

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
         </button>
       </nav>
 
+      <div id="loader" class="text-center py-12 hidden">
+        <span class="loading loading-ring loading-xl"></span>
+      </div>
+
       <section
         id="video-container"
         class="grid grid-cols-1 md:grid-cols-4 gap-4"
